Improved handling of edits and deletions in Org Chart.